# umfpack_lgpl

./: README.md  build_appveyor.sh  setup_centos6.sh  setup_macos.sh
umfpack/: CMakeLists.txt
umfpack/AMD/Source/: CMakeLists.txt
umfpack/UFconfig/: UFconfig.h
umfpack/UMFPACK/: CMakeLists.txt
umfpack/UMFPACK/Include/: umfpack_col_to_triplet.h  umfpack_defaults.h  umfpack_free_numeric.h  umfpack_free_symbolic.h  umfpack_get_determinant.h  umfpack_get_lunz.h  umfpack_get_numeric.h  umfpack_get_symbolic.h  umfpack_load_numeric.h  umfpack_load_symbolic.h  umfpack_numeric.h  umfpack_report_control.h  umfpack_report_info.h  umfpack_report_matrix.h  umfpack_report_numeric.h  umfpack_report_perm.h  umfpack_report_status.h  umfpack_report_symbolic.h  umfpack_report_triplet.h  umfpack_report_vector.h  umfpack_save_numeric.h  umfpack_save_symbolic.h  umfpack_scale.h  umfpack_solve.h  umfpack_symbolic.h  umfpack_tictoc.h  umfpack_transpose.h  umfpack_triplet_to_col.h  umfpack_wsolve.h
umfpack/UMFPACK/Source/: CMakeLists.txt  cholmod_blas.h  umf_row_search.c  umfpack_defaults.c
umfpack/blaswrapper/: CMakeLists.txt  blasfunctions.c  blasfunctions.h
umfpack/testwrapper/: CMakeLists.txt  dswrapper.py  solver_api.py  test_blas.c  test_blas.py  test_blas2.py  test_di_demo.c  test_dswrapper.py  test_zi_demo.c  umfpack_loader.py
