PROJECT(UMFPACK C)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
#set(CMAKE_C_VISIBILITY_PRESET hidden)
#set(CMAKE_CXX_VISIBILITY_PRESET hidden)
IF (WIN32)
ELSE ()
#SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fvisibility=hidden")
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden")
ENDIF()
ADD_SUBDIRECTORY(AMD/Source)
ADD_SUBDIRECTORY(blaswrapper)
ADD_SUBDIRECTORY(UMFPACK/Source)
