PROJECT(UMFPACK C)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)
#set(CMAKE_C_VISIBILITY_PRESET hidden)
#set(CMAKE_CXX_VISIBILITY_PRESET hidden)
IF (WIN32)
SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /fp:strict /wd4251 /wd4005 /wd4996")
SET (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SAFESEH:NO")
SET (CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /SAFESEH:NO")
SET (CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} /SAFESEH:NO")
ELSE ()
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fvisibility=hidden -Wall -Wno-unknown-pragmas -Werror=implicit-function-declaration -Werror=format-security")
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden")
ENDIF()
#SET(RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
ADD_SUBDIRECTORY(AMD/Source)
ADD_SUBDIRECTORY(blaswrapper)
ADD_SUBDIRECTORY(UMFPACK/Source)
ADD_SUBDIRECTORY(testwrapper)
